@@ -40,6 +40,7 @@ lib/gecoder/interface/constraints/bool_var_constraints.rb -text
 lib/gecoder/interface/constraints/int/domain.rb -text
 lib/gecoder/interface/constraints/int/linear.rb -text
 lib/gecoder/interface/constraints/int_enum/channel.rb -text
+lib/gecoder/interface/constraints/int_enum/count.rb -text
 lib/gecoder/interface/constraints/int_enum/distinct.rb -text
 lib/gecoder/interface/constraints/int_enum/element.rb -text
 lib/gecoder/interface/constraints/int_enum/equality.rb -text
@@ -58,6 +59,7 @@ specs/constraints/boolean.rb -text
 specs/constraints/channel.rb -text
 specs/constraints/constraint_helper.rb -text
 specs/constraints/constraints.rb -text
+specs/constraints/count.rb -text
 specs/constraints/distinct.rb -text
 specs/constraints/domain.rb -text
 specs/constraints/element.rb -text
