@@ -32,3 +32,4 @@ require 'gecoder/interface/constraints/int_enum/distinct'
 require 'gecoder/interface/constraints/int_enum/equality'
 require 'gecoder/interface/constraints/int_enum/channel'
 require 'gecoder/interface/constraints/int_enum/element'
+require 'gecoder/interface/constraints/int_enum/count'
