@@ -6,6 +6,7 @@
 * Matrices of integer and boolean variables can now be created using Model#int_var_matrix Model#bool_var_matrix.
 * Added channel constraint for int enums.
 * Added element constraints (variable array access).
+* Added count constraints.
 
 == Version 0.3.0
 
